Closed Bug 1949834 Opened 8 months ago Closed 8 months ago

Content analysis warn response cancels timeout for other parts

Categories

(Firefox :: Data Loss Prevention, defect)

defect

Tracking

()

RESOLVED FIXED
137 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox135 --- unaffected
firefox136 --- unaffected
firefox137 --- fixed

People

(Reporter: handyman, Assigned: handyman)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1949390 cancelled timeout when we get a warn response -- but it cancels timeout for the entire user action. So if another part of the user action takes longer than the timeout period, it will not timeout. Instead of the way it was done, it should not cancel the timer but, instead, check if there are outstanding requests when the timer goes off (vs. all requests either have responses or are showing WARN dialogs). The way to make that determination is in flux (bug 1949166) but it would happen here.

Regressed by: 1949390
No longer regressed by: 1949179

Set release status flags based on info from the regressing bug 1949390

See Also: → 1950306

We can't just stop the timer when we get a warn response, and we can't just
cancel all warn dialogs when the timeout timer triggers. This patch means
we only cancel the timer when all final responses are in (this implies
no outstanding warn responses). It also means that we only cancel warn
dialogs on timeout if some request in the user action is not resolved
(neither with a warn nor a final response).

Assignee: nobody → davidp99
Status: NEW → ASSIGNED
Attachment #9468497 - Attachment description: Bug 1949834: Make timeouts work with default-warn r=#dlp-reviewers! → Bug 1949834: Make timeouts work with warn r=#dlp-reviewers!
Duplicate of this bug: 1950309
Duplicate of this bug: 1950306
Attachment #9468497 - Attachment description: Bug 1949834: Make timeouts work with warn r=#dlp-reviewers! → Bug 1949834: Make timeouts work with default-warn r=#dlp-reviewers!
Attachment #9468497 - Attachment description: Bug 1949834: Make timeouts work with default-warn r=#dlp-reviewers! → Bug 1949834: Make timeouts work with warn r=#dlp-reviewers!
Pushed by daparks@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7b1541544409 Make timeouts work with warn r=dlp-reviewers,gstoll
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch

Hello! I verified that I can no longer reproduce bug 1950306 and bug 1950309 with Firefox 137.0a1 (20250227090415) on WIndows 10x64. Should we look for anything else here? Thank you!

Flags: needinfo?(davidp99)

Thanks atrif. There aren't really any special cases to test for this, just the usual timeout behavior should do.

Flags: needinfo?(davidp99)

(In reply to David Parks [:handyman] from comment #9)

Thanks atrif. There aren't really any special cases to test for this, just the usual timeout behavior should do.

Thank you! I have created these test cases (C2944323/ C2944324/ C2944325) for the TimeoutResult policy. Can either of you please let me know if these are correct, or if there is anything else I should add? Thank you!

Flags: needinfo?(gstoll)
Flags: needinfo?(davidp99)

Those look good to me - I'll let :handyman take a look as well. Thanks!

Flags: needinfo?(gstoll)

LGTM!

Flags: needinfo?(davidp99)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: