Bug 1949834: Make timeouts work with warn r=dlp-reviewers,gstoll

We can't just stop the timer when we get a warn response, and we can't just
cancel all warn dialogs when the timeout timer triggers.  This patch means
we only cancel the timer when all final responses are in (this implies
no outstanding warn responses).  It also means that we only cancel warn
dialogs on timeout if some request in the user action is not resolved
(neither with a warn nor a final response).

Differential Revision: https://phabricator.services.mozilla.com/D239670